ns-dev-system/components/builder-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ns-builder

spec:
  replicas: 1
  template:
    spec:
      nodeSelector:
        kubernetes.io/hostname: eee101.tokyotech.org

      containers:
        - name: buildpack
          resources:
            requests:
              cpu: "10m"
              memory: "50Mi"
            limits:
              cpu: "1"
              memory: "1Gi"

        - name: buildkitd
          resources:
            requests:
              cpu: "10m"
              memory: "50Mi"
            limits:
              cpu: "1"
              memory: "1Gi"

        - name: builder
          image: ns-builder-dev
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "10m"
              memory: "50Mi"
            limits:
              cpu: "1"
              memory: "500Mi"
