ns-dev-system/components/controller-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ns-controller

spec:
  template:
    spec:
      nodeSelector:
        kubernetes.io/hostname: eee101.tokyotech.org

      containers:
        - name: ns-controller
          image: ns-controller-dev
          imagePullPolicy: Always
          ports:
            - containerPort: 2202
              name: ssh
            - containerPort: 2201
              $patch: delete
          resources:
            requests:
              cpu: "50m"
              memory: "100Mi"
            limits:
              cpu: "2"
              memory: "150Mi"
