ns-dev-system/components/controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ns-controller

spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: ns-controller
  template:
    metadata:
      labels:
        app: ns-controller
    spec:
      nodeSelector:
        kubernetes.io/hostname: eee101.tokyotech.org
      enableServiceLinks: false
      serviceAccountName: ns-controller

      volumes:
        - name: config
          configMap:
            name: ns-config
        - name: keys
          secret:
            secretName: ns-keys
        - name: known-hosts
          configMap:
            name: known-hosts

      containers:
        - name: ns-controller
          image: ns-controller-dev
          imagePullPolicy: Always
          args:
            - --loglevel=debug
            - --config=/opt/config/ns.yaml
          ports:
            - containerPort: 2202
              name: ssh
            - containerPort: 8080
              name: webhook
            - containerPort: 10000
              name: grpc
          volumeMounts:
            - mountPath: /opt/config/ns.yaml
              name: config
              subPath: ns.yaml
            - mountPath: /keys
              name: keys
            - mountPath: /root/.ssh/known_hosts
              name: known-hosts
              subPath: known_hosts
          resources:
            requests:
              cpu: "50m"
              memory: "100Mi"
            limits:
              cpu: "2"
              memory: "150Mi"
