ns-dev-system/components/controller-stateful-set-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ns-controller

spec:
  template:
    spec:
      nodeSelector:
        kubernetes.io/hostname: eee101.tokyotech.org

      containers:
        - name: ns-controller
          image: ns-controller-dev
          imagePullPolicy: Always
          args:
            - --loglevel=debug
            - --config=/opt/config/ns-dev.yaml
          volumeMounts:
            - mountPath: /opt/config/ns-dev.yaml
              name: config
              subPath: ns-dev.yaml
          resources:
            requests:
              cpu: "50m"
              memory: "100Mi"
            limits:
              cpu: "1"
              memory: "150Mi"
