ns-dev-system/components/dashboard-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ns-dashboard

spec:
  template:
    spec:
      nodeSelector:
        kubernetes.io/hostname: eee101.tokyotech.org
      containers:
        - name: ns-dashboard
          image: ns-dashboard-dev
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "10m"
              memory: "10Mi"
            limits:
              cpu: "100m"
              memory: "50Mi"
