ns-dev-system/components/gateway-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ns-gateway

spec:
  template:
    spec:
      nodeSelector:
        kubernetes.io/hostname: eee101.tokyotech.org

      containers:
        - name: ns-gateway
          image: ns-gateway-dev
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "10m"
              memory: "50Mi"
            limits:
              cpu: "1"
              memory: "100Mi"
