ns-dev-system/components/gitea-integration-stateful-set-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ns-gitea-integration

spec:
  template:
    spec:
      nodeSelector:
        kubernetes.io/hostname: eee101.tokyotech.org

      containers:
        - name: ns-gitea-integration
          image: ns-gitea-integration-dev
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "10m"
              memory: "10Mi"
            limits:
              cpu: "100m"
              memory: "150Mi"
