ns-dev-system/components/controller-ssh-service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: ns-ssh

spec:
  ports:
    - port: 2202
      targetPort: ssh
      name: ssh
    - port: 2201
      $patch: delete
