ns-dev-system/components/ingress-route-patch.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ns

spec:
  routes:
    - kind: Rule
      match: Host(`ns-dev.trapti.tech`)
      middlewares:
        - name: auth-trapti-tech-hard
          namespace: auth
      services:
        - namespace: ns-dev-system
          kind: Service
          name: ns-dashboard
          port: http
          scheme: http
          weight: 1
    - kind: Rule
      match: Host(`ns-dev.trapti.tech`) && PathPrefix(`/api/webhook`)
      services:
        - namespace: ns-dev-system
          kind: Service
          name: ns-controller
          port: webhook
          scheme: http
          weight: 1
    - kind: Rule
      match: Host(`ns-dev.trapti.tech`) && PathPrefix(`/neoshowcase.protobuf.APIService`)
      middlewares:
        - name: auth-trapti-tech-hard
          namespace: auth
      services:
        - namespace: ns-dev-system
          kind: Service
          name: ns-gateway
          port: http
          scheme: h2c
          weight: 1
